--- a/backend/classifier/dump.ipynb
+++ b/backend/classifier/dump.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def forest_to_json(forest):\n",
     "    forest_json = dict()\n",
-    "    forest_json['n_features'] = forest.n_features_\n",
+    "    forest_json['n_features'] = forest.n_features_in_\n",
     "    forest_json['n_classes'] = forest.n_classes_\n",
     "    forest_json['classes'] = forest.classes_.tolist()\n",
     "    forest_json['n_outputs'] = forest.n_outputs_\n",
@@ -79,7 +79,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
